2005-07-26 14:40 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) started a little routine
	to help put in surface edge splits at any cost.

2005-07-26 13:12 Mike Park  <mike.park@nasa.gov>

	* src/gridshape.c (gridWriteTecplotCellJacDet) added to dump out
	specified cell with corner values set to jacobians.

2005-07-26 12:26 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotCellGeom) added an optional double
	array argument to set face value. Set to NULL to ignor. propagated
	through calls.

2005-07-26 11:09 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptLongShort) only die when unable to
	split surface edges.

2005-07-26 08:24 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptLongShort) return NULL on first edge
	that will not gridSplitEdgeForce, to debug/improve gridSplitEdgeForce.
	* src/unit_main.c (main) exit if gridAdaptLongShort NULL.

2005-07-25 14:47 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) added a block that works like
	gridAdaptLongShort to the gridCOST_CNST_VALID path (sequential only).

2005-07-25 14:45 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridCollapseEdgeToAnything) made public (non
	static) to be called from gridmpi adapt.

2005-07-25 10:06 Mike Park  <mike.park@nasa.gov>

	* src/gridfiller.c (gridSavePart) Reset the uv values of the
	disjoint patches after call to CADTopo_FlushPatches to avoid
	renumbering and projection issues. THIS SHOULD BE LOOKED AT
	AGAIN after Bill Jones finishes with the GeoSDK restart node
	ordering logic.

2005-07-25 09:02 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmooth) called free(cost) to prevent memory leak.

2005-07-25 08:40 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) extended it to split edges
	on the interior of faces (but not splitting geom edges yet). it
	calls gridSmoothNodeVolumeUVSimplex to get the new uv value.
